[CSS Grid Layout] computePreferredLogicalWidths doesn't handle minmax tracks https://bugs.webkit.org/show_bug.cgi?id=108403

Reviewed by Ojan Vafai.

Source/WebCore:

Test: fast/css-grid-layout/grid-preferred-logical-widths.html

The code before this change was only handling minmax() with 2 fixed widths.
The new code was updated to remove this artificial limitation and we now
support all combination of minmax().

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::computePreferredLogicalWidths):
Updated to use computePreferredTrackWidth..

(WebCore::RenderGrid::computePreferredTrackWidth):
Added this helper function that implements the core of the preferred width
computation.

* rendering/RenderGrid.h: Added computePreferredTrackWidth.

LayoutTests:

* fast/css-grid-layout/grid-preferred-logical-widths-expected.txt: Added.
* fast/css-grid-layout/grid-preferred-logical-widths.html: Added.


Canonical link: https://commits.webkit.org/126878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141616 268f45cc-cd09-0410-ab3c-d52691b4dbfc